syntax = "proto3";

package company.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/0utl1er-tech/phox-customer/gen/pb/company/v1;companyv1";

message Company {
  string id = 1;
  string name = 2 [(buf.validate.field).string.max_len = 128];
}

message GetCompanyRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCompanyResponse {
  Company company = 1;
}
