syntax = "proto3";

package customer.v1;

import "buf/validate/validate.proto";
import "call/v1/call.proto";
import "contact/v1/contact.proto";

option go_package = "github.com/0utl1er-tech/phox-customer/gen/pb/customer/v1;customerv1";

message CreateCustomerRequest {
  string book_id = 1 [(buf.validate.field).string.uuid = true];
  string phone = 2 [(buf.validate.field).string.max_len = 64];
  string category = 3 [(buf.validate.field).string.max_len = 128];
  string name = 4 [(buf.validate.field).string.max_len = 128];
  string corporation = 5 [(buf.validate.field).string.max_len = 128];
  string address = 6 [(buf.validate.field).string.max_len = 128];
  string memo = 7 [(buf.validate.field).string.max_len = 1024];
}

message CreateCustomerResponse {
  Customer customer = 1;
}

message ListCustomerRequest {
  string book_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2;
  int32 offset = 3;
}

message ListCustomerResponse {
  repeated Customer customers = 1;
}

message GetCustomerRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCustomerResponse {
  Customer customer = 1;
}

message Customer {
  string id = 1;
  string book_id = 2;
  string phone = 3;
  string category = 4;
  string name = 5;
  string corporation = 6;
  string address = 7;
  string memo = 8;
  repeated contact.v1.Contact contacts = 9;
  repeated call.v1.Call calls = 10;
}

message UpdateCustomerRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  optional string phone = 2 [(buf.validate.field).string.max_len = 64];
  optional string category = 3 [(buf.validate.field).string.max_len = 128];
  optional string name = 4 [(buf.validate.field).string.max_len = 128];
  optional string corporation = 5 [(buf.validate.field).string.max_len = 128];
  optional string address = 6 [(buf.validate.field).string.max_len = 128];
  optional string memo = 7 [(buf.validate.field).string.max_len = 1024];
}

message UpdateCustomerResponse {
  Customer updated_customer = 1;
}

message DeleteCustomerRequest {
  string customer_id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteCustomerResponse {
  string customer_id = 1;
}
